add final version

--- a/notebooks/model-Copy1.ipynb
+++ b/notebooks/model-Copy1.ipynb
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'core'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-cadacca4fb8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmean_squared_error\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_absolute_error\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr2_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultioutput\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMultiOutputRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodel_pipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'core'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -47,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/datasets/2021-11-30 21:10:43.416992.csv\", header=None)"
+    "df = pd.read_csv(\"../data/datasets/2021-12-03 04:24:21.588262.csv\", header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(400, 2100)"
+       "(400, 1044)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +116,102 @@
     "    'subsample': [0.7, 0.8, 0.9],\n",
     "    'subsample_freq': [20]\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Trimethoprim/Sulfamethoxazole',\n",
+       "  'mse': 1.868773725365026,\n",
+       "  'mae': 1.057192978100121,\n",
+       "  'r2': -0.002060757596588081},\n",
+       " {'name': 'Tobramycin',\n",
+       "  'mse': 15.215157400642825,\n",
+       "  'mae': 3.007496818438285,\n",
+       "  'r2': 0.5842064246987198},\n",
+       " {'name': 'Tetracycline',\n",
+       "  'mse': 26.03370034548165,\n",
+       "  'mae': 4.1748590022730045,\n",
+       "  'r2': 0.27839511203709644},\n",
+       " {'name': 'Piperacillin/Tazobactam',\n",
+       "  'mse': 1379.42821654932,\n",
+       "  'mae': 25.761185860026043,\n",
+       "  'r2': 0.3987277021032969},\n",
+       " {'name': 'Nitrofurantoin',\n",
+       "  'mse': 4567.236728463197,\n",
+       "  'mae': 59.16233814006517,\n",
+       "  'r2': -0.21643907070235668},\n",
+       " {'name': 'Meropenem',\n",
+       "  'mse': 7.928262027605476,\n",
+       "  'mae': 1.6625317433362445,\n",
+       "  'r2': 0.8107763179918606},\n",
+       " {'name': 'Levofloxacin',\n",
+       "  'mse': 1.684862474602032,\n",
+       "  'mae': 0.7655098104592416,\n",
+       "  'r2': 0.686034219754267},\n",
+       " {'name': 'Imipenem',\n",
+       "  'mse': 8.827109845722472,\n",
+       "  'mae': 1.9295695015915981,\n",
+       "  'r2': 0.7702731704621748},\n",
+       " {'name': 'Gentamicin',\n",
+       "  'mse': 27.045976420154844,\n",
+       "  'mae': 4.129745419912086,\n",
+       "  'r2': 0.38652320814211094},\n",
+       " {'name': 'Ciprofloxacin',\n",
+       "  'mse': 0.22186329261891044,\n",
+       "  'mae': 0.20847755844905796,\n",
+       "  'r2': 0.6585897877468077},\n",
+       " {'name': 'Cefuroxime sodium',\n",
+       "  'mse': 2.191587022517132,\n",
+       "  'mae': 0.5587137969476478,\n",
+       "  'r2': -0.03593924383687952},\n",
+       " {'name': 'Ceftriaxone',\n",
+       "  'mse': 117.9561176626983,\n",
+       "  'mae': 5.807813626817749,\n",
+       "  'r2': 0.5279153582577576},\n",
+       " {'name': 'Ceftazidime',\n",
+       "  'mse': 33.60860385752891,\n",
+       "  'mae': 3.4883767492811355,\n",
+       "  'r2': 0.37818440642738504},\n",
+       " {'name': 'Cefoxitin',\n",
+       "  'mse': 73.63924643260276,\n",
+       "  'mae': 6.180052014668839,\n",
+       "  'r2': 0.47148444732938466},\n",
+       " {'name': 'Cefepime',\n",
+       "  'mse': 171.15353001092075,\n",
+       "  'mae': 11.399841490224281,\n",
+       "  'r2': 0.16372680726058841},\n",
+       " {'name': 'Cefazolin',\n",
+       "  'mse': 9.72603457978708,\n",
+       "  'mae': 1.1130546452276953,\n",
+       "  'r2': 0.2601275359810351},\n",
+       " {'name': 'Aztreonam',\n",
+       "  'mse': 104.28761776401785,\n",
+       "  'mae': 6.756334120069632,\n",
+       "  'r2': 0.05410677973030664},\n",
+       " {'name': 'Ampicillin/Sulbactam',\n",
+       "  'mse': 11.719941402528349,\n",
+       "  'mae': 1.9073254167162648,\n",
+       "  'r2': 0.26423358940600494},\n",
+       " {'name': 'Ampicillin', 'mse': 0.0, 'mae': 0.0, 'r2': 1.0},\n",
+       " {'name': 'Amikacin',\n",
+       "  'mse': 94.85938665005898,\n",
+       "  'mae': 6.060434817709251,\n",
+       "  'r2': 0.55796201648034}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
@@ -231,7 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +336,7 @@
     "    \n",
     "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state = 42, shuffle=False)\n",
     "\n",
-    "    model = lgb.LGBMRegressor()\n",
+    "    model = lgb.LGBMRegressor(**params)\n",
     "    model.fit(x_train, y_train)\n",
     "    \n",
     "    y_pred=model.predict(x_test)\n",
@@ -630,6 +721,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Trimethoprim/Sulfamethoxazole',\n",
+       "  'mse': 1.7584694678021393,\n",
+       "  'mae': 0.9879802338533317,\n",
+       "  'r2': 0.057085818791628884},\n",
+       " {'name': 'Tobramycin',\n",
+       "  'mse': 16.377358839917637,\n",
+       "  'mae': 3.276315632765871,\n",
+       "  'r2': 0.5524462608744565},\n",
+       " {'name': 'Tetracycline',\n",
+       "  'mse': 27.184940718828734,\n",
+       "  'mae': 4.298610717606818,\n",
+       "  'r2': 0.24648490835482673},\n",
+       " {'name': 'Piperacillin/Tazobactam',\n",
+       "  'mse': 1694.9050853334707,\n",
+       "  'mae': 30.102860811654285,\n",
+       "  'r2': 0.26121601461468524},\n",
+       " {'name': 'Nitrofurantoin',\n",
+       "  'mse': 4643.972060507573,\n",
+       "  'mae': 58.52501738409949,\n",
+       "  'r2': -0.23687677988006883},\n",
+       " {'name': 'Meropenem',\n",
+       "  'mse': 9.0197628780036,\n",
+       "  'mae': 1.8484351266623074,\n",
+       "  'r2': 0.7847254875440017},\n",
+       " {'name': 'Levofloxacin',\n",
+       "  'mse': 1.8648682458297026,\n",
+       "  'mae': 0.8330624626218273,\n",
+       "  'r2': 0.6524910355097608},\n",
+       " {'name': 'Imipenem',\n",
+       "  'mse': 8.31666080514956,\n",
+       "  'mae': 1.9535202083396532,\n",
+       "  'r2': 0.7835576816760308},\n",
+       " {'name': 'Gentamicin',\n",
+       "  'mse': 27.219312560268932,\n",
+       "  'mae': 4.189539755410192,\n",
+       "  'r2': 0.38259146992352033},\n",
+       " {'name': 'Ciprofloxacin',\n",
+       "  'mse': 0.2547820985697206,\n",
+       "  'mae': 0.26967824937760543,\n",
+       "  'r2': 0.6079332938576072},\n",
+       " {'name': 'Cefuroxime sodium',\n",
+       "  'mse': 2.5130827146955372,\n",
+       "  'mae': 0.8371870539659564,\n",
+       "  'r2': -0.1879067453917982},\n",
+       " {'name': 'Ceftriaxone',\n",
+       "  'mse': 107.92128458121442,\n",
+       "  'mae': 6.166989064210656,\n",
+       "  'r2': 0.5680768240137097},\n",
+       " {'name': 'Ceftazidime',\n",
+       "  'mse': 39.02372919936982,\n",
+       "  'mae': 3.865340915526723,\n",
+       "  'r2': 0.277995496677342},\n",
+       " {'name': 'Cefoxitin',\n",
+       "  'mse': 83.89410187978943,\n",
+       "  'mae': 6.4560192472349485,\n",
+       "  'r2': 0.39788441939879504},\n",
+       " {'name': 'Cefepime',\n",
+       "  'mse': 175.391176078966,\n",
+       "  'mae': 11.358448744255865,\n",
+       "  'r2': 0.1430212465467796},\n",
+       " {'name': 'Cefazolin',\n",
+       "  'mse': 11.558507453739065,\n",
+       "  'mae': 1.3628287585006897,\n",
+       "  'r2': 0.12072887259190612},\n",
+       " {'name': 'Aztreonam',\n",
+       "  'mse': 101.11597862910168,\n",
+       "  'mae': 6.840507334251012,\n",
+       "  'r2': 0.08287368436559828},\n",
+       " {'name': 'Ampicillin/Sulbactam',\n",
+       "  'mse': 12.383422768232235,\n",
+       "  'mae': 1.9901484114417338,\n",
+       "  'r2': 0.22258088090059913},\n",
+       " {'name': 'Ampicillin', 'mse': 0.0, 'mae': 0.0, 'r2': 1.0},\n",
+       " {'name': 'Amikacin',\n",
+       "  'mse': 107.387524185448,\n",
+       "  'mae': 6.801790019653388,\n",
+       "  'r2': 0.4995817881342517}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -839,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
